# model-service

./: Dockerfile  README.md  app.py  pyproject.toml  request.http  requirements.txt
.dvc/: config
.dvc/tmp/: lock
.github/workflows/: release.yml  test.yml
model_service/: app.py
models/: .gitignore  tokenizer.pkl  tokenizer.pkl.dvc  trained_model.h5.dvc
src/: app.py
tests/: test_app.py
